sandbox/in_arbeit/mpi/fp_mpi.h

typedef struct ompi_communicator_t *MPI_Comm;
typedef struct ompi_datatype_t *MPI_Datatype;
typedef struct ompi_win_t *MPI_Win;
/*
 * User typedefs
 */
typedef int (MPI_Datarep_extent_function)(MPI_Datatype, MPI_Aint *, void *);
typedef int (MPI_Datarep_conversion_function)(void *, MPI_Datatype,
                                              int, void *, MPI_Offset, void *);
typedef void (MPI_Comm_errhandler_function)(MPI_Comm *, int *, ...);
    /* This is a little hackish, but errhandler.h needs space for a
       MPI_File_errhandler_fn.  While it could just be removed, this
       allows us to maintain a stable ABI within OMPI, at least for
       apps that don't use MPI I/O. */
typedef void (ompi_file_errhandler_fn)(MPI_File *, int *, ...);
typedef void (MPI_Win_errhandler_function)(MPI_Win *, int *, ...);
typedef void (MPI_User_function)(void *, void *, int *, MPI_Datatype *);
typedef int (MPI_Comm_copy_attr_function)(MPI_Comm, int, void *,
                                            void *, void *, int *);
typedef int (MPI_Comm_delete_attr_function)(MPI_Comm, int, void *, void *);
typedef int (MPI_Type_copy_attr_function)(MPI_Datatype, int, void *,
                                            void *, void *, int *);
typedef int (MPI_Type_delete_attr_function)(MPI_Datatype, int,
                                              void *, void *);
typedef int (MPI_Win_copy_attr_function)(MPI_Win, int, void *,
                                           void *, void *, int *);
typedef int (MPI_Win_delete_attr_function)(MPI_Win, int, void *, void *);
typedef int (MPI_Grequest_query_function)(void *, MPI_Status *);
typedef int (MPI_Grequest_free_function)(void *);
typedef int (MPI_Grequest_cancel_function)(void *, int);
 int OMPI_C_MPI_TYPE_NULL_DELETE_FN( MPI_Datatype datatype,
                                                  int type_keyval,
                                                  void* attribute_val_out,
                                                  void* extra_state );
 int OMPI_C_MPI_TYPE_NULL_COPY_FN( MPI_Datatype datatype,
                                                int type_keyval,
                                                void* extra_state,
                                                void* attribute_val_in,
                                                void* attribute_val_out,
                                                int* flag );
 int OMPI_C_MPI_TYPE_DUP_FN( MPI_Datatype datatype,
                                          int type_keyval,
                                          void* extra_state,
                                          void* attribute_val_in,
                                          void* attribute_val_out,
                                          int* flag );
 int OMPI_C_MPI_COMM_NULL_DELETE_FN( MPI_Comm comm,
                                                  int comm_keyval,
                                                  void* attribute_val_out,
                                                  void* extra_state );
 int OMPI_C_MPI_COMM_NULL_COPY_FN( MPI_Comm comm,
                                                int comm_keyval,
                                                void* extra_state,
                                                void* attribute_val_in,
                                                void* attribute_val_out,
                                                int* flag );
 int OMPI_C_MPI_COMM_DUP_FN( MPI_Comm comm, int comm_keyval,
                                          void* extra_state,
                                          void* attribute_val_in,
                                          void* attribute_val_out,
                                          int* flag );
 int OMPI_C_MPI_WIN_NULL_DELETE_FN( MPI_Win window,
                                                 int win_keyval,
                                                 void* attribute_val_out,
                                                 void* extra_state );
 int OMPI_C_MPI_WIN_NULL_COPY_FN( MPI_Win window, int win_keyval,
                                               void* extra_state,
                                               void* attribute_val_in,
                                               void* attribute_val_out,
                                               int* flag );
 int OMPI_C_MPI_WIN_DUP_FN( MPI_Win window, int win_keyval,
                                         void* extra_state,
                                         void* attribute_val_in,
                                         void* attribute_val_out,
                                         int* flag );
/*
 * External variables
 *
 * The below externs use the ompi_predefined_xxx_t structures to maintain
 * back compatibility between MPI library versions.
 * See ompi/communicator/communicator.h comments with struct ompi_communicator_t
 * for full explanation why we chose to use the ompi_predefined_xxx_t structure.
 */
 extern struct ompi_predefined_communicator_t ompi_mpi_comm_world;
 extern struct ompi_predefined_communicator_t ompi_mpi_comm_self;
 extern struct ompi_predefined_communicator_t ompi_mpi_comm_null;
 extern struct ompi_predefined_group_t ompi_mpi_group_empty;
 extern struct ompi_predefined_group_t ompi_mpi_group_null;
 extern struct ompi_predefined_request_t ompi_request_null;
 extern struct ompi_predefined_message_t ompi_message_null;
 extern struct ompi_predefined_message_t ompi_message_no_proc;
 extern struct ompi_predefined_op_t ompi_mpi_op_null;
 extern struct ompi_predefined_op_t ompi_mpi_op_min;
 extern struct ompi_predefined_op_t ompi_mpi_op_max;
 extern struct ompi_predefined_op_t ompi_mpi_op_sum;
 extern struct ompi_predefined_op_t ompi_mpi_op_prod;
 extern struct ompi_predefined_op_t ompi_mpi_op_land;
 extern struct ompi_predefined_op_t ompi_mpi_op_band;
 extern struct ompi_predefined_op_t ompi_mpi_op_lor;
 extern struct ompi_predefined_op_t ompi_mpi_op_bor;
 extern struct ompi_predefined_op_t ompi_mpi_op_lxor;
 extern struct ompi_predefined_op_t ompi_mpi_op_bxor;
 extern struct ompi_predefined_op_t ompi_mpi_op_maxloc;
 extern struct ompi_predefined_op_t ompi_mpi_op_minloc;
 extern struct ompi_predefined_op_t ompi_mpi_op_replace;
 extern struct ompi_predefined_op_t ompi_mpi_op_no_op;
 extern struct ompi_predefined_datatype_t ompi_mpi_datatype_null;
 extern struct ompi_predefined_datatype_t ompi_mpi_char;
 extern struct ompi_predefined_datatype_t ompi_mpi_signed_char;
 extern struct ompi_predefined_datatype_t ompi_mpi_unsigned_char;
 extern struct ompi_predefined_datatype_t ompi_mpi_byte;
 extern struct ompi_predefined_datatype_t ompi_mpi_short;
 extern struct ompi_predefined_datatype_t ompi_mpi_unsigned_short;
 extern struct ompi_predefined_datatype_t ompi_mpi_int;
 extern struct ompi_predefined_datatype_t ompi_mpi_unsigned;
 extern struct ompi_predefined_datatype_t ompi_mpi_long;
 extern struct ompi_predefined_datatype_t ompi_mpi_unsigned_long;
 extern struct ompi_predefined_datatype_t ompi_mpi_long_long_int;
 extern struct ompi_predefined_datatype_t ompi_mpi_unsigned_long_long;
 extern struct ompi_predefined_datatype_t ompi_mpi_float;
 extern struct ompi_predefined_datatype_t ompi_mpi_double;
 extern struct ompi_predefined_datatype_t ompi_mpi_long_double;
 extern struct ompi_predefined_datatype_t ompi_mpi_wchar;
 extern struct ompi_predefined_datatype_t ompi_mpi_packed;
/*
 * Following are the C++/C99 datatypes
 */
 extern struct ompi_predefined_datatype_t ompi_mpi_cxx_bool;
 extern struct ompi_predefined_datatype_t ompi_mpi_cxx_cplex;
 extern struct ompi_predefined_datatype_t ompi_mpi_cxx_dblcplex;
 extern struct ompi_predefined_datatype_t ompi_mpi_cxx_ldblcplex;
/*
 * Following are the Fortran datatypes
 */
 extern struct ompi_predefined_datatype_t ompi_mpi_logical;
 extern struct ompi_predefined_datatype_t ompi_mpi_character;
 extern struct ompi_predefined_datatype_t ompi_mpi_integer;
 extern struct ompi_predefined_datatype_t ompi_mpi_real;
 extern struct ompi_predefined_datatype_t ompi_mpi_dblprec;
 extern struct ompi_predefined_datatype_t ompi_mpi_cplex;
 extern struct ompi_predefined_datatype_t ompi_mpi_dblcplex;
 extern struct ompi_predefined_datatype_t ompi_mpi_ldblcplex;
/* Aggregate struct datatypes are not const */
 extern struct ompi_predefined_datatype_t ompi_mpi_2int;
 extern struct ompi_predefined_datatype_t ompi_mpi_2integer;
 extern struct ompi_predefined_datatype_t ompi_mpi_2real;
 extern struct ompi_predefined_datatype_t ompi_mpi_2dblprec;
 extern struct ompi_predefined_datatype_t ompi_mpi_2cplex;
 extern struct ompi_predefined_datatype_t ompi_mpi_2dblcplex;
 extern struct ompi_predefined_datatype_t ompi_mpi_float_int;
 extern struct ompi_predefined_datatype_t ompi_mpi_double_int;
 extern struct ompi_predefined_datatype_t ompi_mpi_longdbl_int;
 extern struct ompi_predefined_datatype_t ompi_mpi_short_int;
 extern struct ompi_predefined_datatype_t ompi_mpi_long_int;
/* Optional MPI2 datatypes, always declared and defined, but not "exported" as MPI_LOGICAL1 */
 extern struct ompi_predefined_datatype_t ompi_mpi_logical1;
 extern struct ompi_predefined_datatype_t ompi_mpi_logical2;
 extern struct ompi_predefined_datatype_t ompi_mpi_logical4;
 extern struct ompi_predefined_datatype_t ompi_mpi_logical8;
 extern struct ompi_predefined_datatype_t ompi_mpi_integer1;
 extern struct ompi_predefined_datatype_t ompi_mpi_integer2;
 extern struct ompi_predefined_datatype_t ompi_mpi_integer4;
 extern struct ompi_predefined_datatype_t ompi_mpi_integer8;
 extern struct ompi_predefined_datatype_t ompi_mpi_integer16;
 extern struct ompi_predefined_datatype_t ompi_mpi_real2;
 extern struct ompi_predefined_datatype_t ompi_mpi_real4;
 extern struct ompi_predefined_datatype_t ompi_mpi_real8;
 extern struct ompi_predefined_datatype_t ompi_mpi_real16;
 extern struct ompi_predefined_datatype_t ompi_mpi_complex8;
 extern struct ompi_predefined_datatype_t ompi_mpi_complex16;
 extern struct ompi_predefined_datatype_t ompi_mpi_complex32;
/* New datatypes from the MPI 2.2 standard */
 extern struct ompi_predefined_datatype_t ompi_mpi_int8_t;
 extern struct ompi_predefined_datatype_t ompi_mpi_uint8_t;
 extern struct ompi_predefined_datatype_t ompi_mpi_int16_t;
 extern struct ompi_predefined_datatype_t ompi_mpi_uint16_t;
 extern struct ompi_predefined_datatype_t ompi_mpi_int32_t;
 extern struct ompi_predefined_datatype_t ompi_mpi_uint32_t;
 extern struct ompi_predefined_datatype_t ompi_mpi_int64_t;
 extern struct ompi_predefined_datatype_t ompi_mpi_uint64_t;
 extern struct ompi_predefined_datatype_t ompi_mpi_aint;
 extern struct ompi_predefined_datatype_t ompi_mpi_offset;
 extern struct ompi_predefined_datatype_t ompi_mpi_count;
 extern struct ompi_predefined_datatype_t ompi_mpi_c_bool;
 extern struct ompi_predefined_datatype_t ompi_mpi_c_float_complex;
 extern struct ompi_predefined_datatype_t ompi_mpi_c_double_complex;
 extern struct ompi_predefined_datatype_t ompi_mpi_c_long_double_complex;
 extern struct ompi_predefined_errhandler_t ompi_mpi_errhandler_null;
 extern struct ompi_predefined_errhandler_t ompi_mpi_errors_are_fatal;
 extern struct ompi_predefined_errhandler_t ompi_mpi_errors_return;
 extern struct ompi_predefined_win_t ompi_mpi_win_null;
 extern struct ompi_predefined_file_t ompi_mpi_file_null;
 extern struct ompi_predefined_info_t ompi_mpi_info_null;
 extern struct ompi_predefined_info_t ompi_mpi_info_env;
 extern MPI_Fint *MPI_F_STATUS_IGNORE;
 extern MPI_Fint *MPI_F_STATUSES_IGNORE;
/*
 * Removed datatypes.  These datatypes are only available if Open MPI
 * was configured with --enable-mpi1-compatibility.
 *
 * These datatypes were formally removed from the MPI specification
 * and should no longer be used in MPI applications.
 */

 extern struct ompi_predefined_datatype_t ompi_mpi_lb;
 extern struct ompi_predefined_datatype_t ompi_mpi_ub;
/*
 * Even though MPI_Copy_function and MPI_Delete_function are
 * deprecated, we do not use the attributes marking them as such,
 * because otherwise the compiler will warn for all the functions that
 * are declared using them (e.g., MPI_Keyval_create).
 */
typedef int (MPI_Copy_function)(MPI_Comm, int, void *,
                                void *, void *, int *);
/* MPI_Copy_function was deprecated in MPI-2.0; use MPI_Comm_copy_attr_function instead. */
typedef int (MPI_Delete_function)(MPI_Comm, int, void *, void *);
/*
 * Removed typedefs.  These typedefs are only available if Open MPI
 * was configured with --enable-mpi1-compatibility.
 *
 * These typedefs were formally removed from the MPI specification
 * and should no longer be used in MPI applications.
 *
 * Even though MPI_Handler_function is removed, we do not use the
 * attributes marking it as such, because otherwise the compiler
 * will warn for all the functions that are declared using them
 * (e.g., MPI_Errhandler_create).
 */
typedef void (MPI_Handler_function)(MPI_Comm *, int *, ...);