sandbox/mpi/fp_mpi.pas


function OMPI_C_MPI_TYPE_NULL_DELETE_FN(datatype:TMPI_Datatype; type_keyval:longint; attribute_val_out:pointer; extra_state:pointer):longint;cdecl;external libhdf5;
function OMPI_C_MPI_TYPE_NULL_COPY_FN(datatype:TMPI_Datatype; type_keyval:longint; extra_state:pointer; attribute_val_in:pointer; attribute_val_out:pointer; 
           flag:Plongint):longint;cdecl;external libhdf5;
function OMPI_C_MPI_TYPE_DUP_FN(datatype:TMPI_Datatype; type_keyval:longint; extra_state:pointer; attribute_val_in:pointer; attribute_val_out:pointer; 
           flag:Plongint):longint;cdecl;external libhdf5;
function OMPI_C_MPI_COMM_NULL_DELETE_FN(comm:TMPI_Comm; comm_keyval:longint; attribute_val_out:pointer; extra_state:pointer):longint;cdecl;external libhdf5;
function OMPI_C_MPI_COMM_NULL_COPY_FN(comm:TMPI_Comm; comm_keyval:longint; extra_state:pointer; attribute_val_in:pointer; attribute_val_out:pointer; 
           flag:Plongint):longint;cdecl;external libhdf5;
function OMPI_C_MPI_COMM_DUP_FN(comm:TMPI_Comm; comm_keyval:longint; extra_state:pointer; attribute_val_in:pointer; attribute_val_out:pointer; 
           flag:Plongint):longint;cdecl;external libhdf5;
function OMPI_C_MPI_WIN_NULL_DELETE_FN(window:TMPI_Win; win_keyval:longint; attribute_val_out:pointer; extra_state:pointer):longint;cdecl;external libhdf5;
function OMPI_C_MPI_WIN_NULL_COPY_FN(window:TMPI_Win; win_keyval:longint; extra_state:pointer; attribute_val_in:pointer; attribute_val_out:pointer; 
           flag:Plongint):longint;cdecl;external libhdf5;
function OMPI_C_MPI_WIN_DUP_FN(window:TMPI_Win; win_keyval:longint; extra_state:pointer; attribute_val_in:pointer; attribute_val_out:pointer; 
           flag:Plongint):longint;cdecl;external libhdf5;
{
 * External variables
 *
 * The below externs use the ompi_predefined_xxx_t structures to maintain
 * back compatibility between MPI library versions.
 * See ompi/communicator/communicator.h comments with struct ompi_communicator_t
 * for full explanation why we chose to use the ompi_predefined_xxx_t structure.
  }
  var
    ompi_mpi_comm_world : Tompi_predefined_communicator_t;cvar;external libhdf5;
    ompi_mpi_comm_self : Tompi_predefined_communicator_t;cvar;external libhdf5;
    ompi_mpi_comm_null : Tompi_predefined_communicator_t;cvar;external libhdf5;
    ompi_mpi_group_empty : Tompi_predefined_group_t;cvar;external libhdf5;
    ompi_mpi_group_null : Tompi_predefined_group_t;cvar;external libhdf5;
    ompi_request_null : Tompi_predefined_request_t;cvar;external libhdf5;
    ompi_message_null : Tompi_predefined_message_t;cvar;external libhdf5;
    ompi_message_no_proc : Tompi_predefined_message_t;cvar;external libhdf5;
    ompi_mpi_op_null : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_op_min : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_op_max : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_op_sum : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_op_prod : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_op_land : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_op_band : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_op_lor : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_op_bor : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_op_lxor : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_op_bxor : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_op_maxloc : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_op_minloc : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_op_replace : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_op_no_op : Tompi_predefined_op_t;cvar;external libhdf5;
    ompi_mpi_datatype_null : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_char : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_signed_char : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_unsigned_char : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_byte : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_short : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_unsigned_short : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_int : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_unsigned : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_long : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_unsigned_long : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_long_long_int : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_unsigned_long_long : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_float : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_double : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_long_double : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_wchar : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_packed : Tompi_predefined_datatype_t;cvar;external libhdf5;
{
 * Following are the C++/C99 datatypes
  }
    ompi_mpi_cxx_bool : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_cxx_cplex : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_cxx_dblcplex : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_cxx_ldblcplex : Tompi_predefined_datatype_t;cvar;external libhdf5;
{
 * Following are the Fortran datatypes
  }
    ompi_mpi_logical : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_character : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_integer : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_real : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_dblprec : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_cplex : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_dblcplex : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_ldblcplex : Tompi_predefined_datatype_t;cvar;external libhdf5;
{ Aggregate struct datatypes are not const  }
    ompi_mpi_2int : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_2integer : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_2real : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_2dblprec : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_2cplex : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_2dblcplex : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_float_int : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_double_int : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_longdbl_int : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_short_int : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_long_int : Tompi_predefined_datatype_t;cvar;external libhdf5;
{ Optional MPI2 datatypes, always declared and defined, but not "exported" as MPI_LOGICAL1  }
    ompi_mpi_logical1 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_logical2 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_logical4 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_logical8 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_integer1 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_integer2 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_integer4 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_integer8 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_integer16 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_real2 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_real4 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_real8 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_real16 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_complex8 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_complex16 : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_complex32 : Tompi_predefined_datatype_t;cvar;external libhdf5;
{ New datatypes from the MPI 2.2 standard  }
    ompi_mpi_int8_t : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_uint8_t : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_int16_t : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_uint16_t : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_int32_t : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_uint32_t : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_int64_t : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_uint64_t : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_aint : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_offset : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_count : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_c_bool : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_c_float_complex : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_c_double_complex : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_c_long_double_complex : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_errhandler_null : Tompi_predefined_errhandler_t;cvar;external libhdf5;
    ompi_mpi_errors_are_fatal : Tompi_predefined_errhandler_t;cvar;external libhdf5;
    ompi_mpi_errors_return : Tompi_predefined_errhandler_t;cvar;external libhdf5;
    ompi_mpi_win_null : Tompi_predefined_win_t;cvar;external libhdf5;
    ompi_mpi_file_null : Tompi_predefined_file_t;cvar;external libhdf5;
    ompi_mpi_info_null : Tompi_predefined_info_t;cvar;external libhdf5;
    ompi_mpi_info_env : Tompi_predefined_info_t;cvar;external libhdf5;
    MPI_F_STATUS_IGNORE : PMPI_Fint;cvar;external libhdf5;
    MPI_F_STATUSES_IGNORE : PMPI_Fint;cvar;external libhdf5;
{
 * Removed datatypes.  These datatypes are only available if Open MPI
 * was configured with --enable-mpi1-compatibility.
 *
 * These datatypes were formally removed from the MPI specification
 * and should no longer be used in MPI applications.
  }
    ompi_mpi_lb : Tompi_predefined_datatype_t;cvar;external libhdf5;
    ompi_mpi_ub : Tompi_predefined_datatype_t;cvar;external libhdf5;
